# system_identification

./: nlmv_4DOF_parameters.m  nonlinear_4DOF_maneuvering.m  progress.json  pyproject.toml
checkpoints/: nn.ckpt
configurations/: config-1dof.json  env.env
dataset/dataverse_files/: MANIFEST.TXT
datasets/autopilot/: AutopilotData.py  AutopilotData_static.py  DataGeneration.py  result.csv  test_dataset.csv  train_dataset.csv  validation_dataset.csv
datasets/patrolship/: DataGeneration_all.py  DataGeneration_select.py
dataverse_files/: README.txt
deepsysid/models/: lstm.py
models/: dynamic_model.py  nn.py
models/FrigatePILSTM-0001000-128/: FrigatePILSTM-0001000-128-metadata.hdf5  FrigatePILSTM-0001000-128.pth
models/FrigatePILSTM-0001000-256/: FrigatePILSTM-0001000-256-metadata.hdf5
models/FrigatePILSTM-0001000-512/: FrigatePILSTM-0001000-512-metadata.hdf5
models/FrigatePILSTM-0002500-128/: FrigatePILSTM-0002500-128-metadata.hdf5  FrigatePILSTM-0002500-128.pth
models/FrigatePILSTM-0002500-256/: FrigatePILSTM-0002500-256-metadata.hdf5
models/FrigatePILSTM-0002500-512/: FrigatePILSTM-0002500-512-metadata.hdf5
models/FrigatePINN-0001000-128/: FrigatePINN-0001000-128-metadata.hdf5  FrigatePINN-0001000-128.pth
models/FrigatePINN-0001000-256-0/: FrigatePINN-0001000-256-0-metadata.hdf5  FrigatePINN-0001000-256-0.pth
random_generation/: initial_state.py
scripts/: __main__.py  config.py  generate_autopilot_data.py  main-sig.py  metrics.py  show_histogram.py  show_line_chart.py  show_result.py  train.py  train_try.py  utils.py
(+570 files in other folders)
